back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olive-back
  labels:
    app: olive-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: olive-back
  template:
    metadata:
      labels:
        app: olive-back
    spec:
      containers:
        - name: olive-back
          image: 605134473022.dkr.ecr.ap-northeast-2.amazonaws.com/olive-back:latest  # ECR 이미지
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
