back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-back-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external" 
spec:
  type: LoadBalancer
  selector:
    app: olive-back
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 8080
