frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-front-service
spec:
  selector:
    app: olive-front  # 프론트엔드 파드를 선택하기 위한 레이블
  ports:
    - protocol: TCP
      port: 80  # 외부로 노출할 포트
      targetPort: 80  # 컨테이너 내부의 실제 포트
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-09caf2c82e67640d8, subnet-018f81e09fefd33d1
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olive-front-service
            port:
              number: 80
